# web-auto-c

./: .gitignore  package.json  pnpm-lock.yaml
apps/api/: alembic.ini  generate_test_data.py  requirements.txt  webcapture.db
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0b4205b67d07_update_models_to_use_uuid_and_add_new_.py
apps/api/app/: config.py  database.py  main.py  models.py  schemas.py  utils.py
apps/web/: package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/captures/: page.tsx
apps/web/app/sites/: page.tsx
apps/web/app/tags/: page.tsx
apps/web/components/: navigation-menu.tsx  providers.tsx
apps/web/lib/: api.ts  swr-config.ts
docs/: AI 모듈 LangGraph 워크플로우 구현.txt  URL 기반 스크린샷 페이지 추출 AI 모듈 설계 요구사항 정의서.md
test/: hello.py  pyproject.toml  server.py  test.ipynb  파일지우기
test/menu_extractor/: README.md  __init__.py  cli.py  main.py  requirements.txt  runner.py  version.py
test/menu_extractor/config/: config.py
test/menu_extractor/models/: models.py
test/menu_extractor/utils/: __init__.py  utils.py
test/menu_extractor/workflows/: __init__.py  nodes.py  workflow.py
test/web_capture/: README.md  __init__.py  cli.py  main.py  menu_urls.txt  requirements.txt  version.py
test/web_capture/config/: config.py
test/web_capture/function/: page_capture.py
test/web_capture/function/capture/: __init__.py  batch_capture.py  browser.py  gif_generator.py  page_capture.py  utils.py
test/web_capture/models/: models.py
test/web_capture/utils/: __init__.py  device_profiles.py  queue_manager.py  storage.py  utils.py
(+10 files in other folders)
