[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "langchain>=0.3.21",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.20",
    "langchain-google-genai>=2.1.2",
    "langchain-openai>=0.3.11",
    "langgraph>=0.3.21",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "langserve>=0.3.1",
    "lxml>=5.3.1",
    "nest-asyncio>=1.6.0",
    "pillow>=11.1.0",
    "playwright>=1.51.0",
    "sse-starlette>=2.2.1",
    "unstructured>=0.17.2",
    "uvicorn>=0.34.0",
]
